better palette overflow fix

--- a/style.css
+++ b/style.css
@@ -21,13 +21,15 @@ canvas {
 }
 
 .palette {
-	overflow-x: scroll;
+	overflow-x: auto;
 	white-space: nowrap;
 	user-select: none;
 }
 .palette input {
 	clip: rect(0, 0, 0, 0);
 	position: absolute;
+	left: 0;
+	top: 0;
 }
 .palette span {
 	display: inline-block;
